--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -6,6 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <title>Receitas da Nah</title>
 </head>
@@ -28,6 +29,9 @@
           </a>
         <%})%>
       </div>
+      <a href="/receitas" class="floatingButton">
+        <span class="material-symbols-outlined" style="font-size: 30px; color:#FFFFFF">add</span>
+      </a>
     </div>
   </div>
 </body>
