--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -29,9 +29,9 @@
           </a>
         <%})%>
       </div>
-      <a href="/receitas" class="floatingButton">
+      <!-- <a href="/receitas" class="floatingButton">
         <span class="material-symbols-outlined" style="font-size: 30px; color:#FFFFFF">add</span>
-      </a>
+      </a> -->
     </div>
   </div>
 </body>
