--- a/src/views/viewRecipe.ejs
+++ b/src/views/viewRecipe.ejs
@@ -6,6 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
   <link rel="stylesheet" type="text/css" href="/css/style.css">
   <title>Receitas da Nah</title>
 </head>
@@ -17,9 +18,28 @@
   <div class="pageContent">
     <div class="container">
       <div class="recipeImage">
-        <img src=<%= currentRecipe.photo %> style="width:100%;height:450px;object-fit:cover;object-position:center;" >
+        <img src=<%= currentRecipe.photo %> style="width:100%;height:500px;object-fit:cover;object-position:center;" >
       </div>
-      <h2><%= currentRecipe.title %></h2>
+      <h2 class="title"><%= currentRecipe.title %></h2>
+      <p class="description"><%= currentRecipe.description %></p>
+      <div class="prepTime">
+        <span class="material-symbols-outlined" style="font-size: 20px;">
+          schedule
+        </span>
+        <p><span>Tempo de preparo: </span><%= currentRecipe.prepTime%> minutos</p>
+      </div>
+      <h3 class="subtitle">Ingredientes</h3>
+      <ul class="ingredientsList">
+        <% currentRecipe.ingredients.forEach((ingredient) => {%>
+          <li><%= ingredient.amount %> <%= ingredient.measurement %> <%= ingredient.name %></li>
+        <% })%>
+      </ul>
+      <h3 class="subtitle">Modo de preparo</h3>
+      <ol class="stepsList">
+        <% currentRecipe.methods.forEach((step) => {%>
+          <li><%= step%></li>
+        <% })%>
+      </ol>
     </div>
   </div>
 </body>
